--- a/FINAL/travel-booking/src/main/resources/templates/fragments/login_modal.html
+++ b/FINAL/travel-booking/src/main/resources/templates/fragments/login_modal.html
@@ -44,7 +44,8 @@
                   <form method="post" action="#" name="contactform" id="contactform" >
 
                     <div class="form-group mb-4 input-row">
-                      <input type="text" class="form-control login-email" id="login-email" placeholder="Email Address" autocomplete="off">
+                      <input type="text" class="form-control login-email" id="login-email"
+                             placeholder="Email Address" autocomplete="off">
                       <small style="color: #e74c3c">Error</small>
                     </div>
 
