--- a/FINAL/travel-booking/src/main/resources/templates/user/success-page.html
+++ b/FINAL/travel-booking/src/main/resources/templates/user/success-page.html
@@ -43,7 +43,7 @@
     <img src="/assets/user/images/logo1.png" alt="image">
     <h1>Congratulations! Your registration has been successfully verified.</h1>
 
-    <a href="/home" class="button-link">Back to Homepage and Login</a>
+    <a href="/" class="button-link">Back to Homepage and Login</a>
 </div>
 </body>
 </html>
