--- a/FINAL/travel-booking/src/main/resources/templates/user/success-reset-password.html
+++ b/FINAL/travel-booking/src/main/resources/templates/user/success-reset-password.html
@@ -43,7 +43,7 @@
     <img src="/assets/user/images/successfull-icon.png" alt="image" style="width: 10%">
     <h1>Congratulations! Password changed successfully.</h1>
 
-    <a href="/home" class="button-link">Back to Homepage and Login</a>
+    <a href="/" class="button-link">Back to Homepage and Login</a>
 </div>
 </body>
 </html>
