--- a/FINAL/travel-booking/src/main/resources/templates/fragments/header.html
+++ b/FINAL/travel-booking/src/main/resources/templates/fragments/header.html
@@ -28,24 +28,24 @@
                     <div class="navbar-flex d-flex align-items-center justify-content-between w-100 pb-3 pt-3">
 
                         <div class="navbar-header">
-                            <a class="navbar-brand" href="/home">
-                                <img src="assets/user/images/logo1.png" alt="image">
+                            <a class="navbar-brand" href="/">
+                                <img src="/assets/user/images/logo1.png" alt="image">
                             </a>
                         </div>
 
                         <div class="navbar-collapse1 d-flex align-items-center" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav" id="responsive-menu">
                                 <li class="submenu dropdown">
-                                    <a href="/home" class="dropdown-toggle" role="button" aria-haspopup="true"
+                                    <a href="/" class="dropdown-toggle" role="button" aria-haspopup="true"
                                        aria-expanded="false">Home</i></a>
                                 </li>
 
                                 <li class="submenu dropdown">
-                                    <a href="/hotel" class="dropdown-toggle" role="button" aria-haspopup="true"
+                                    <a href="/hotels" class="dropdown-toggle" role="button" aria-haspopup="true"
                                        aria-expanded="false">Tour</i></a>
                                 </li>
                                 <li class="submenu dropdown">
-                                    <a href="/hotel" class="dropdown-toggle" role="button" aria-haspopup="true"
+                                    <a href="/hotels" class="dropdown-toggle" role="button" aria-haspopup="true"
                                        aria-expanded="false">Hotel</i></a>
                                 </li>
                                 <li class="submenu dropdown">
