--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_admin.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_admin.html
@@ -50,7 +50,7 @@
 
     <nav class="sidebar">
         <div class="sidebar-header">
-            <a href="/home" class="sidebar-brand">
+            <a href="/" class="sidebar-brand">
                 <img src="/assets/user/images/logo1.png" alt="logo" class="w-75">
             </a>
             <div class="sidebar-toggler not-active">
