--- a/FINAL/travel-booking/src/main/resources/templates/unused/hotel-single.html
+++ b/FINAL/travel-booking/src/main/resources/templates/unused/hotel-single.html
@@ -133,7 +133,7 @@
                         <div class="menu-wrapper">
                             <a href="#" class="down-button"><i class="la la-angle-down"></i></a>
                             <div class="logo">
-                                <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+                                <a href="../user/index.html"><img src="images/logo.png" alt="logo"></a>
                                 <div class="menu-toggler">
                                     <i class="la la-bars"></i>
                                     <i class="la la-times"></i>
@@ -147,7 +147,7 @@
                                         <li>
                                             <a href="#">Home <i class="la la-angle-down"></i></a>
                                             <ul class="dropdown-menu-item">
-                                                <li><a href="index.html">Home - main</a></li>
+                                                <li><a href="../user/index.html">Home - main</a></li>
                                                 <li><a href="index2.html">Home - Hotel</a></li>
                                                 <li><a href="index3.html">Home - Activity</a></li>
                                                 <li><a href="index4.html">Home - Car</a></li>
@@ -308,7 +308,7 @@
                 <div class="col-lg-12">
                     <div class="breadcrumb-list breadcrumb-top-list">
                         <ul class="list-items bg-transparent radius-none p-0">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="../user/index.html">Home</a></li>
                             <li>France</li>
                             <li>Hilton Hotel and Resorts</li>
                         </ul>
@@ -321,14 +321,7 @@
         </div>
         <!-- end container -->
     </section>
-    <!-- end breadcrumb-top-bar -->
-    <!-- ================================
-    END BREADCRUMB TOP BAR
-================================= -->
 
-    <!-- ================================
-    START BREADCRUMB AREA
-================================= -->
     <section class="breadcrumb-area bread-bg-7 py-0">
         <div class="breadcrumb-wrap">
             <div class="container">
@@ -357,14 +350,7 @@
         </div>
         <!-- end breadcrumb-wrap -->
     </section>
-    <!-- end breadcrumb-area -->
-    <!-- ================================
-    END BREADCRUMB AREA
-================================= -->
 
-    <!-- ================================
-    START TOUR DETAIL AREA
-================================= -->
     <section class="tour-detail-area padding-bottom-90px">
         <div class="single-content-navbar-wrap menu section-bg" id="single-content-navbar">
             <div class="container">
@@ -2025,7 +2011,7 @@
                 <div class="col-lg-3 responsive-column">
                     <div class="footer-item">
                         <div class="footer-logo padding-bottom-30px">
-                            <a href="index.html" class="foot__logo"><img src="images/logo.png" alt="logo"></a>
+                            <a href="../user/index.html" class="foot__logo"><img src="images/logo.png" alt="logo"></a>
                         </div>
                         <!-- end logo -->
                         <p class="footer__desc">Morbi convallis bibendum urna ut viverra. Maecenas consequat</p>
