--- a/FINAL/travel-booking/src/main/resources/templates/user/index.html
+++ b/FINAL/travel-booking/src/main/resources/templates/user/index.html
@@ -52,13 +52,13 @@
                                                 </div>
                                                 <div class="form-group col-lg-6 mb-2">
                                                     <label for="check-in-hotel">Check-in</label>
-                                                    <input type="date" class="form-control" id="check-in-hotel">
+                                                    <input type="date" class="form-control date datepicker" id="check-in-hotel">
                                                 </div>
                                                 <div class="form-group col-lg-6 mb-2">
                                                     <label for="check-out-hotel">Check-out</label>
                                                     <input type="date" class="form-control" id="check-out-hotel">
                                                 </div>
-                                                <div class="form-group col-lg-6 mb-2">
+                                                <div class="form-group col-lg-6 mb-3">
                                                     <label for="guests">Guests</label>
                                                     <select class="form-control" id="guests">
                                                         <option value="1">1</option>
@@ -68,10 +68,9 @@
                                                     </select>
                                                 </div>
                                                 <div class="col-lg-12">
-                                                    <div class="form-group mb-0 text-center">
+                                                    <div class="form-group mb-0 text-center" id="user-search-home">
                                                         <a href="#" class="nir-btn w-100"><i class="fa fa-search mr-2"></i>
-                                                            Search
-                                                            Now</a>
+                                                            Search Now</a>
                                                     </div>
                                                 </div>
                                             </form>
